# clash-sub-manager

./: .gitignore  pyproject.toml
.github/workflows/: package.yml  publish.yml
src/clash_sub_manager/: __init__.py  __main__.py  cli.py
src/clash_sub_manager/api/: __init__.py  dependencies.py  schemas.py  schemas_patch.py  server.py
src/clash_sub_manager/api/routes/: __init__.py  _db.py  _rule_providers.py  composite_templates.py  config.py  convert.py  merge.py  merge_profiles.py  rules.py  template_patches.py
src/clash_sub_manager/core/: __init__.py  composer.py  converter.py  fetcher.py  merger.py  patch.py  rules.py  template.py
src/clash_sub_manager/db/: __init__.py  base.py  models.py  models_patch.py  session.py
src/clash_sub_manager/models/: __init__.py  clash.py  proxy.py  subscription.py
src/clash_sub_manager/parsers/: __init__.py  base.py  clash.py  ss.py  ssr.py  trojan.py  vmess.py
src/clash_sub_manager/webui/: package-lock.json  package.json  pnpm-lock.yaml
src/clash_sub_manager/webui/src/: App.vue.js  api.js  api.ts  main.js
src/clash_sub_manager/webui/src/components/: MonacoJsonEditor.vue  StructuredValueEditor.vue  structuredValue.ts
src/clash_sub_manager/webui/src/plugins/: vuetify.js
src/clash_sub_manager/webui/src/stores/: manager.js  manager.ts
src/clash_sub_manager/webui/src/utils/: templatePath.ts
src/clash_sub_manager/webui/src/views/: MergeProfilesView.vue  MergeProfilesView.vue.js  PreviewView.vue.js  RulesView.vue  RulesView.vue.js  SubscriptionsView.vue.js  TemplatesView.vue  TemplatesView.vue.js
tests/: test_api.py  test_cli.py  test_db.py  test_models.py  test_parsers_and_core.py  test_rules.py  test_webui.py
webui/: index.html  tsconfig.json  vite.config.ts
webui/src/: App.vue  api.ts  main.ts  style.css
webui/src/components/: SegmentedPicker.vue  TemplatePathTree.vue
webui/src/plugins/: vuetify.ts
webui/src/utils/: templatePath.ts
webui/src/views/: MergeProfilesView.vue  PreviewView.vue  SubscriptionsView.vue
