[project]
name = "clash-sub-manager"
version = "0.1.0"
description = "Clash subscription management web service"
readme = "README.md"
authors = [{ name = "shoucandanghehe", email = "wallfjjd@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
    "cyclopts>=4.9.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
clash-sub-manager = "clash_sub_manager.cli:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.fastapi]
entrypoint = "clash_sub_manager.api.server:app"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "C90",   # mccabe
    "I",     # isort
    "N",     # PEP8-naming
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TC",    # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PD",    # pandas-vet
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "TRY",   # tryceratops
    "FLY",   # flynt
    "FAST",  # FastAPI
    "PERF",  # Perflint
    "FURB",  # refurb
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",   # 过长的行由 ruff format 处理, 剩余的都是字符串
    "TRY003",
    "COM812", # 强制尾随逗号
    "TID252", # 相对导入
    "ISC001", # format warning
]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S603", "PLR2004"]

[tool.ruff.format]
quote-style = "single"

[tool.basedpyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "standard"
reportExplicitAny = 'hint'
reportUnnecessaryTypeIgnoreComment = 'error'
reportImplicitOverride = 'error'
reportUnnecessaryComparison = 'error'
reportImplicitAbstractClass = 'error'
enableTypeIgnoreComments = false

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "mypy>=1.19.1",
    "ruff>=0.15.6",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.uv.build-backend]
source-exclude = [
    "/src/clash_sub_manager/webui/node_modules",
    "/src/clash_sub_manager/webui/.pnpm-store",
]
wheel-exclude = [
    "/src/clash_sub_manager/webui/node_modules",
    "/src/clash_sub_manager/webui/.pnpm-store",
    "/src/clash_sub_manager/webui/src",
    "/src/clash_sub_manager/webui/package.json",
    "/src/clash_sub_manager/webui/pnpm-lock.yaml",
    "/src/clash_sub_manager/webui/tsconfig.json",
    "/src/clash_sub_manager/webui/vite.config.ts",
]
